Intentando arreglar tests y pasando logica a los beans, faltan revisar algunos tests tmas al igual que sus beans o servicios.